[package]
name = "deskephem"
version = "1.1.3"
description = "CLI Astronomy Calculator and Ephemeris Generator"
authors = ["Oliver Webb <oliverwebb8192@gmail.com>"]
license = "0BSD"
edition = "2021"
readme = "README.md"
keywords = ["astronomy", "cli"]
repository = "https://github.com/oliverkwebb/deskephem"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["cargo"] }
pracstro = "0.5.1"
