[package]
name = "webephem"
version = "1.0.0"
description = "Web Astronomy Calculator and Ephemeris Generator"
authors = ["Oliver Webb <oliverwebb8192@gmail.com>"]
license = "0BSD"
edition = "2021"
readme = "README.md"
keywords = ["astronomy", "cli"]
repository = "https://github.com/oliverkwebb/deskephem"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pracstro = "1.0.0"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["console"] }
